--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -24,7 +24,7 @@
           </div>
           <div class="form-group">
             <h3>Question 1</h3>
-              <label for="q1">You are ready to engage in a new relationship at this moment</label>
+              <label for="q1">Sleep more – you’ll be less sensitive to negative emotions</label>
               <select class="form-control" id="q1">
                 <option disabled selected>-- Please Select --</option>
                 <option value ="1">1 (strongly disagree)</option>
@@ -36,7 +36,7 @@
           </div>
           <div class="form-group">
             <h3>Question 2</h3>
-              <label for="q2">You love furry animals</label>
+              <label for="q2"> Spend time with friends and family – don’t regret it on your deathbed</label>
               <select class="form-control" id="q2">
                 <option disabled selected>-- Please Select --</option>
                 <option value ="1">1 (strongly disagree)</option>
@@ -60,7 +60,7 @@
           </div>
            <div class="form-group">
             <h3>Question 4</h3>
-              <label for="q4">Wealth is your measurment of success</label>
+              <label for="q4">Help others – 100 hours a year is the magical number</label>
               <select class="form-control" id="q4">
                 <option disabled selected>-- Please Select --</option>
                 <option value ="1">1 (strongly disagree)</option>
@@ -72,7 +72,7 @@
           </div>
            <div class="form-group">
             <h3>Question 5</h3>
-              <label for="q5">You prefer whiskey over cocktail</label>
+              <label for="q5">Practice smiling – it can alleviate pain</label>
               <select class="form-control" id="q5">
                 <option disabled selected>-- Please Select --</option>
                 <option value ="1">1 (strongly disagree)</option>
@@ -96,7 +96,7 @@
           </div>
            <div class="form-group">
             <h3>Question 7</h3>
-              <label for="q7">You can survive in the woods for over a week with a bottle of water, a knife, and a tin of tuna</label>
+              <label for="q7">Plan a trip – but don’t take one</label>
               <select class="form-control" id="q7">
                 <option disabled selected>-- Please Select --</option>
                 <option value ="1">1 (strongly disagree)</option>
@@ -108,7 +108,7 @@
           </div>
           <div class="form-group">
             <h3>Question 8</h3>
-              <label for="q8">You prefer Arnold Schwarzenegger as President over Donald Trump</label>
+              <label for="q8"> Meditate – rewire your brain for happiness</label>
               <select class="form-control" id="q8">
                 <option disabled selected>-- Please Select --</option>
                 <option value ="1">1 (strongly disagree)</option>
@@ -120,7 +120,7 @@
           </div>
           <div class="form-group">
             <h3>Question 9</h3>
-              <label for="q9">You rather take Lyft over Uber</label>
+              <label for="q9">Getting older will make yourself happier</label>
               <select class="form-control" id="q9">
                 <option disabled selected>-- Please Select --</option>
                 <option value ="1">1 (strongly disagree)</option>
@@ -132,7 +132,7 @@
           </div>
            <div class="form-group">
             <h3>Question 10</h3>
-              <label for="q10">Always iOS over Android </label>
+              <label for="q10">Exercise more – seven minutes might be enough</label>
               <select class="form-control" id="q10">
                 <option disabled selected>-- Please Select --</option>
                 <option value ="1">1 (strongly disagree)</option>
